<package>
  <name>subsystem_deployer</name>
  <version>0.1.1</version>
  <license>BSD</license>
  <maintainer email="dawid.seredynski@blablabla.gmail.com">dseredyn</maintainer>
  <description>
    Package description.
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build deps are queried automatically with orocos_use_package() -->
  <build_depend>rtt</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>common_behavior</build_depend>
  <build_depend>subsystem_msgs</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>common_behavior</run_depend>
  <run_depend>subsystem_msgs</run_depend>
</package>
